# sirun

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-3rdparty.csv  LICENSE-MIT  NOTICE  README.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/chainguard/: self.release.create-release.sts.yaml
.github/workflows/: ci.yml  release.yml
docs/superpowers/specs/: 2026-06-03-ready-signal-design.md
examples/: assigned-port.json  cachegrind.json  env.json  instructions.json  iterations-nohup.json  iterations.json  long.json  no-setup.json  ready-signal-cpu.json  ready-signal.json  service.json  sigint.json  simple-name.json  simple.json  simple.yml  teardown.json  timeout.json  variants.json
src/: config.rs  main.rs  metric_value.rs  rusage.rs  statsd.rs  subproc.rs  summarize.rs
tests/: examples.rs
tests/fixtures/summary/: in.ndjson  out.json
