[package]
name = "sirun"
version = "0.1.2"
authors = ["Bryan English <bryan.english@datadoghq.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
serde_json = "1.0.64"
shlex = "1.0.0"
nix = "0.20.0"
assert_cmd = "1.0.3"
serde_yaml = "0.8.17"
lazy_static = "1.4.0"

[dev-dependencies]
predicates = "1.0.7"
serial_test = "0.5.1"
