[package]
name = "sirun"
version = "0.1.12"
authors = ["Bryan English <bryan.english@datadoghq.com>"]
edition = "2018"
license = "Apache-2.0 OR MIT"
description = "A benchmark test runner"
readme = "README.md"

[profile.release]
lto = true

[dependencies]
async-std = { version = "1.9.0", features = ["unstable", "attributes"] }
serde_json = { version = "1.0.64", features = ["preserve_order"] }
shlex = "2.0.1"
nix = { version = "0.31.3", features = ["fs"] }
assert_cmd = "2.0.17"
# yaml_serde is the official YAML organization's maintained fork of the
# now-unmaintained serde_yaml; the package rename keeps `use serde_yaml::` working.
serde_yaml = { package = "yaml_serde", version = "0.10" }
serde = { version = "1.0.228", features = ["derive"] }
anyhow = "1.0.102"
indexmap = { version = "2.14.0", features = ["serde"] }

[target.'cfg(target_os = "linux")'.dependencies]
perfcnt = "0.8.0"

[dev-dependencies]
predicates = "3.1.4"
serial_test = "0.5.1"

[target.'cfg(target_os = "linux")'.dev-dependencies]
caps = "0.5.5"
